== 2026-02-16 12:13 == Improvement: Better first-run experience (v1.2.0-beta.13) ==

Removed terminal channel prompt on first run — app starts directly into TUI/Web UI.
Users add channels via UI instead (TUI: 'a' key, Web: "+ Add Channel" button).
Web server now enabled by default for new and existing configs missing the field.
- cmd/twitchpoint/main.go (removed channel prompt, removed bufio import)
- internal/config/config.go (WebEnabled defaults to true)

== 2026-02-15 23:38 == Bugfix: Claim log showing channel ID instead of name (v1.2.0-beta.12) ==

Claims from untracked channels (via user-level PubSub) showed raw channel ID
instead of display name. Now resolves name via GQL and caches it.
- internal/farmer/farmer.go (nameCache, resolveChannelName, claim handler)
- internal/twitch/gql.go (GetChannelNameByID query)

== 2026-02-15 03:37 == Bugfix: Auto-select not triggering when matched channels are offline (v1.2.0-beta.11) ==

Auto-select for drop channels only triggered when zero channels matched a campaign.
Now also triggers when matched channels exist but are ALL offline, so a live temp
channel gets created from the allowed list or game directory.
- internal/farmer/drops.go (processDrops auto-select condition)

== 2026-02-15 01:02 == Bugfix: Drop assigned to multiple channels instead of one (v1.2.0-beta.10) ==

All matching channels got P0 + drop info for the same drop, wasting Spade slots.
Now picks only the single best channel per drop (watching > online > offline, permanent preferred).
- internal/farmer/drops.go (processDrops channel selection logic)

== 2026-02-15 00:05 == Tweak: Reduce drop check interval to 5 min (v1.2.0-beta.9) ==

Drop inventory check reduced from 10 min to 5 min for faster claim detection.
- internal/farmer/drops.go
- internal/farmer/farmer.go (log message)

== 2026-02-14 19:49 == Feature: Update notification system ==

Background version checker that queries GitHub releases and compares semver.